--- a/public/themes/default/index.html
+++ b/public/themes/default/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-Hans">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <meta charset="utf-8">
+    <title>Welcome</title>
 </head>
 <body>
 welcome
